[package]
name = "roast"
version = "0.0.1"
authors = ["Skyler Lipthay <skyler.lipthay@gmail.com>"]
description = "A rudimentary Rust-to-JavaScript transpiler"
readme = "README.md"
keywords = ["javascript", "transpiler"]
license = "MIT"
repository = "https://github.com/SkylerLipthay/roast"

[lib]
name = "roast"
plugin = true

[dev-dependencies]
compiletest_rs = "0.0.3"
tempdir = "0.3"
tempfile = "0.2"
